--- a/index.html
+++ b/index.html
@@ -426,6 +426,9 @@
             </div>
         </div>
 
+        <div>
+            <a href="http://www.google.com">kjhkjhkjhk</a>
+        </div>
     </footer>
 
 
